// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<FacetBox
  property="assignees"
>
  <FacetHeader
    name="issues.facet.assignees"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={Array []}
  />
  <DeferredSpinner
    loading={false}
    timeout={100}
  />
  <FacetItemsList>
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      loading={false}
      name="unassigned"
      onClick={[Function]}
      stat="5"
      tooltip={false}
      value=""
    />
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      key="foo"
      loading={false}
      name={
        <span>
          <Connect(Avatar)
            className="little-spacer-right"
            hash="avatart-foo"
            name="name-foo"
            size={16}
          />
          name-foo
        </span>
      }
      onClick={[Function]}
      stat="13"
      tooltip={false}
      value="foo"
    />
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      key="bar"
      loading={false}
      name="bar"
      onClick={[Function]}
      stat="7"
      tooltip={false}
      value="bar"
    />
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      key="baz"
      loading={false}
      name="baz"
      onClick={[Function]}
      stat="6"
      tooltip={false}
      value="baz"
    />
  </FacetItemsList>
  <FacetFooter
    onSearch={[Function]}
    onSelect={[Function]}
    renderOption={[Function]}
  />
</FacetBox>
`;

exports[`should render footer select option 1`] = `
<span>
  <Connect(Avatar)
    className="little-spacer-right"
    hash="avatar-foo"
    name="name-foo"
    size={16}
  />
  name-foo
</span>
`;

exports[`should render without stats 1`] = `
<FacetBox
  property="assignees"
>
  <FacetHeader
    name="issues.facet.assignees"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={Array []}
  />
  <DeferredSpinner
    loading={false}
    timeout={100}
  />
</FacetBox>
`;

exports[`should select unassigned 1`] = `
<FacetBox
  property="assignees"
>
  <FacetHeader
    name="issues.facet.assignees"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={
      Array [
        "unassigned",
      ]
    }
  />
  <DeferredSpinner
    loading={false}
    timeout={100}
  />
  <FacetItemsList>
    <FacetItem
      active={true}
      disabled={false}
      halfWidth={false}
      loading={false}
      name="unassigned"
      onClick={[Function]}
      stat="5"
      tooltip={false}
      value=""
    />
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      key="foo"
      loading={false}
      name={
        <span>
          <Connect(Avatar)
            className="little-spacer-right"
            hash="avatart-foo"
            name="name-foo"
            size={16}
          />
          name-foo
        </span>
      }
      onClick={[Function]}
      stat="13"
      tooltip={false}
      value="foo"
    />
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      key="bar"
      loading={false}
      name="bar"
      onClick={[Function]}
      stat="7"
      tooltip={false}
      value="bar"
    />
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      key="baz"
      loading={false}
      name="baz"
      onClick={[Function]}
      stat="6"
      tooltip={false}
      value="baz"
    />
  </FacetItemsList>
  <FacetFooter
    onSearch={[Function]}
    onSelect={[Function]}
    renderOption={[Function]}
  />
</FacetBox>
`;

exports[`should select user 1`] = `
<FacetBox
  property="assignees"
>
  <FacetHeader
    name="issues.facet.assignees"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={
      Array [
        "name-foo",
      ]
    }
  />
  <DeferredSpinner
    loading={false}
    timeout={100}
  />
  <FacetItemsList>
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      loading={false}
      name="unassigned"
      onClick={[Function]}
      stat="5"
      tooltip={true}
      value=""
    />
    <FacetItem
      active={true}
      disabled={false}
      halfWidth={false}
      key="foo"
      loading={false}
      name={
        <span>
          <Connect(Avatar)
            className="little-spacer-right"
            hash="avatart-foo"
            name="name-foo"
            size={16}
          />
          name-foo
        </span>
      }
      onClick={[Function]}
      stat="13"
      tooltip={false}
      value="foo"
    />
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      key="bar"
      loading={false}
      name="bar"
      onClick={[Function]}
      stat="7"
      tooltip={true}
      value="bar"
    />
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      key="baz"
      loading={false}
      name="baz"
      onClick={[Function]}
      stat="6"
      tooltip={true}
      value="baz"
    />
  </FacetItemsList>
  <FacetFooter
    onSearch={[Function]}
    onSelect={[Function]}
    renderOption={[Function]}
  />
</FacetBox>
`;
